--- a/Bakat.html
+++ b/Bakat.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pencaran Bakat</title>
-    <link rel="stylesheet" href="src/css/Bakat.css">
+    <link rel="stylesheet" href="Bakat.css">
 </head>
-<body background="src/img/bg1.jpeg">
+<body background="bg1.jpeg">
     <header>
         <h3>
             
@@ -18,7 +18,7 @@
     <h2 class="title text-primary">Pencarian Bakat CBG Academy<br></h2>
 
     <div class="poster">
-        <img src="src/img/poster.jpg" width="315px" height="445px">
+        <img src="poster.jpg" width="315px" height="445px">
     </div>
 
     <div class="caption">
